aggiunto markdown & fix cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="z-40 sticky h-20 w-full overflow-hidden">
       <div
         [ngClass]="!menuStatus ? 'open' : ' closed'"
-        class="relative flex flex-col text text-blue_background w-full h-20"
+        class="relative flex flex-col text text-blue w-full h-20"
       >
         <div class="flex justify-left md:justify-center w-full align-top">
           <label class="entrance-text hidden md:block">RATI</label>
