--- a/src/app/shared/burger/burger.component.html
+++ b/src/app/shared/burger/burger.component.html
@@ -1,5 +1,3 @@
 <div [ngClass]="{ open: isOpen }" (click)="openBurger()" class="menu-btn">
-  <div
-    class="btn-burger bg-blue_background after:bg-blue_background before:bg-blue_background"
-  ></div>
+  <div class="btn-burger bg-blue after:bg-blue before:bg-blue"></div>
 </div>
