added onPush & responsive page

--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div
   [ngClass]="isOpen ? 'open' : 'closed'"
-  class="bg-blue_background menu h-screen w-screen top-0 right-0 flex justify-center align-middle items-center"
+  class="bg-blue_background menu h-screen w-screen top-0 right-0 flex justify-center align-middle items-center opacity-100"
 >
   <ul class="flex w-fit text-center flex-col text-4xl gap-4">
     <li
