--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -1,23 +1,26 @@
 <div class="h-full w-full min-h-screen overflow-x-hidden">
   <div *ngIf="article$ | async; else spinner">
-    <header class="relative w-screen h-screen">
-      <div class="relative h-2/3 md:h-2/3 lg:h-1/2 bg-blue_background">
+    <header class="relative w-full h-screen">
+      <div class="relative h-2/3 md:h-1/2 lg:h-1/2 bg-blue_background">
         <h1
           class="w-fit text-[3rem] md:text-[5rem] overflow-hidden top-20 underline decoration-2 underline-offset-8 decoration-lime text-white font-thin mx-8"
         >
           {{ article.title | titlecase }}
         </h1>
         <p
-          class="lg:absolute w-full lg:w-1/3 pt-16 bottom-0 right-8 text-white underline decoration-lime underline-offset-4 font-thin text-[1.5rem] px-8 py-8"
-        >
-          {{ article.description }}
-        </p>
+          [innerHTML]="article.description | markdown"
+          class="text-lg md:text-2xl prose-strong:font-bold prose-em:underline prose-em:decoration-lime prose-em:underline-offset-4 lg:absolute w-full lg:w-1/3 pt-8 md:pt-16 bottom-0 xl:bottom-20 right-8 text-white underline decoration-lime underline-offset-2 md:underline-offset-4 font-thin px-8 py-8"
+        ></p>
       </div>
-      <img
-        class="border border-yellow rounded-lg absolute bottom-[17.5%] lg:bottom-[35%] left-[2.75%] lg:left-0 lg:ml-8 w-11/12 md:w-auto md:h-1/3 aspect-video object-cover"
-        src="{{ article.image.url }}"
-        alt="{{ article.image.description }}"
-      />
+      <div
+        class="absolute w-full lg:w-[40%] flex justify-center bottom-[17.5%] md:bottom-[35.5%] lg:bottom-[35%]"
+      >
+        <img
+          class="border border-yellow rounded-lg lg:ml-8 xl:ml-0 w-11/12 md:h-1/3 aspect-video object-cover"
+          src="{{ article.image.url }}"
+          alt="{{ article.image.description }}"
+        />
+      </div>
     </header>
     <article
       class="absolute w-full top-[70%] md:top-[70%] lg:top-[55%] flex bg-[#d6f2050b] justify-center"
