--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -1,32 +1,32 @@
-<div class="h-full w-full min-h-screen overflow-x-hidden">
+<div class="w-full h-full min-h-screen">
   <div *ngIf="article$ | async; else spinner">
     <header class="relative w-full h-screen">
-      <div class="relative h-2/3 md:h-1/2 lg:h-1/2 bg-blue_background">
+      <div class="relative h-2/3 md:h-1/2 bg-blue_background">
         <h1
-          class="w-fit text-[3rem] md:text-[5rem] overflow-hidden top-20 underline decoration-2 underline-offset-8 decoration-lime text-white font-thin mx-8"
+          class="w-fit text-[3rem] xl:text-[5rem] overflow-hidden top-20 underline decoration-2 underline-offset-8 decoration-lime text-white font-thin mx-8"
         >
           {{ article.title | titlecase }}
         </h1>
         <p
           [innerHTML]="article.description | markdown"
-          class="text-lg md:text-2xl prose-strong:font-bold prose-em:underline prose-em:decoration-lime prose-em:underline-offset-4 lg:absolute w-full lg:w-1/3 pt-8 md:pt-16 bottom-0 xl:bottom-20 right-8 text-white underline decoration-lime underline-offset-2 md:underline-offset-4 font-thin px-8 py-8"
+          class="w-full px-8 mt-6 text-lg font-thin text-white underline md:mt-6 lg:pt-0 xl:pt-6 lg:text-xl xl:text-2xl prose-strong:font-bold lg:absolute lg:w-1/3 lg:top-1/3 xl:top-1/3 lg:right-0 decoration-lime underline-offset-2 md:underline-offset-4"
         ></p>
-      </div>
-      <div
-        class="absolute w-full lg:w-[40%] flex justify-center bottom-[17.5%] md:bottom-[35.5%] lg:bottom-[35%]"
-      >
-        <img
-          class="border border-yellow rounded-lg lg:ml-8 xl:ml-0 w-11/12 md:h-1/3 aspect-video object-cover"
-          src="{{ article.image.url }}"
-          alt="{{ article.image.description }}"
-        />
+        <div
+          class="absolute w-full lg:w-[50%] xl:w-[40%] flex justify-center -bottom-[25%] sm:-bottom-[10%] md:-bottom-[45%] lg:bottom-[10%] xl:-bottom-[35%]"
+        >
+          <img
+            class="object-cover w-11/12 border rounded-lg md:w-10/12 lg:w-11/12 border-yellow lg:ml-8 xl:ml-0 md:h-1/3 aspect-video"
+            src="{{ article.image.url }}"
+            alt="{{ article.image.description }}"
+          />
+        </div>
       </div>
     </header>
     <article
-      class="absolute w-full top-[70%] md:top-[70%] lg:top-[55%] flex bg-[#d6f2050b] justify-center"
+      class="absolute w-full top-[70%] md:top-[55%] lg:top-[54%] flex bg-[#d6f2050b] justify-center"
     >
       <section
-        class="prose lg:prose-2xl px-8 py-64"
+        class="px-8 my-40 prose sm:prose-sm md:prose-md lg:prose-lg md:my-64 lg:my-24 xl:my-64 lg:prose-2xl"
         [innerHtml]="_returnHtmlFromRichText(article.content) | markdown"
       ></section>
     </article>
