--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -1,32 +1,36 @@
 <article
-  class="w-full relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] transition duration-200 ease-in-out shadow-md hover:shadow-blue"
+  class="w-full h-fit relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] transition duration-200 ease-in-out shadow-md hover:shadow-blue"
 >
-  <div class="w-fit overflow-hidden rounded-t-md">
-    <img class="img overflow-x-clip w-fit" [src]="parsedArticle.image" />
-  </div>
-  <div class="h-48 flex flex-col pt-6 pb-6 px-6 gap-4">
-    <div
-      class="lg:text-md text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
-    >
-      <h1>{{ parsedArticle.title }}</h1>
+  <div (click)="changeRoute(parsedArticle.id)">
+    <div class="overflow-hidden w-fit rounded-t-md">
+      <img class="img overflow-x-clip w-fit" [src]="parsedArticle.image" />
     </div>
-    <button
-      (click)="changeRoute(parsedArticle.id)"
-      class="w-fit rounded border-2 text-sm text-ellipsis overflow-hidden max-h-full text-opacity-80 text-blue"
+    <div class="flex flex-col gap-4 px-6 pb-6 min-h-64">
+      <div
+        class="py-4 text-2xl text-blue rich-text text-3xl leading-[1.3] font-serif-display"
+      >
+        <h1>{{ parsedArticle.title }}</h1>
+      </div>
+      <button
+        (click)="changeRoute(parsedArticle.id)"
+        class="max-h-full overflow-hidden text-sm border-2 rounded w-fit text-ellipsis text-opacity-80 text-blue"
+      >
+        <p class="px-2 py-4 text-sm font-extrabold w-fit">
+          Vai all' articolo completo
+        </p>
+      </button>
+    </div>
+    <!-- notifica nuovo articolo -->
+    <div
+      *ngIf="parsedArticle.publicationDate"
+      class="absolute grid w-8 h-8 text-white rounded-full notification place-items-center -top-3 -right-3 bg-blue"
     >
-      <p class="text-sm font-extrabold px-2 py-4 w-fit">Vai all' articolo</p>
-    </button>
-  </div>
-  <!-- notifica nuovo articolo -->
-  <div
-    *ngIf="parsedArticle.publicationDate"
-    class="notification absolute grid place-items-center -top-3 -right-3 w-8 h-8 rounded-full bg-blue text-white"
-  >
-    <!-- testo all'interno del div -->
-    <p
-      class="grid place-items-center h-fit mb-1 text-xs font-bold text-center text-yellow"
-    >
-      New
-    </p>
+      <!-- testo all'interno del div -->
+      <p
+        class="grid mb-1 text-xs font-bold text-center place-items-center h-fit text-yellow"
+      >
+        New
+      </p>
+    </div>
   </div>
 </article>
