modifiche fatte da taiulwindPlay

--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -25,7 +25,7 @@
   </div>
   <article class="flex justify-center w-full -translate-y-96">
     <section
-      class="w-full px-8 my-64 lg:max-w-screen-md md:max-w-screen-xs xl:max-w-screen-lg sm:my-48 md:my-40 prose-base w-fit sm:prose-sm md:prose-md lg:prose-lg md:my-64 lg:my-0 xl:my-40 lg:prose-2xl"
+      class="w-full mx-8 mt-64 prose sm:mt-40 lg:mt-32 prose-slate lg:prose-lg xl:prose-xl"
       [innerHtml]="_returnHtmlFromRichText(article.content) | markdown"
     ></section>
   </article>
@@ -35,3 +35,15 @@
     <spinner></spinner>
   </div>
 </ng-template>
+
+<!-- 
+<div class="grid w-full bg-blue-100 realtive h-96 place-items-center gap-y-2 lg:place-items-start">
+  <div class="px-8 py-8 text-3xl">Percezioni</div>
+  <p class="px-8">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore deserunt architecto aspernatur ullam tenetur dolorem. Cupiditate consequatur vitae voluptas, molestiae blanditiis ea quaerat ratione molestias veritatis unde necessitatibus tempora ipsam!</p>
+  <div class="max-w-2xl translate-y-[25%] px-8">
+    <img class="aspect-video" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80" alt="" />
+  </div>
+</div>
+<article>
+  
+</article> -->
